apps/disabled/jitsi/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jitsi
  namespace: jitsi
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - meet.sifft.io
      secretName: tls-jitsi-meet
  rules:
    - host: meet.sifft.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
          - path: /xmpp-websocket
            pathType: Prefix
            backend:
              service:
                name: prosody
                port:
                  number: 5280
          - path: /colibri-ws
            pathType: Prefix
            backend:
              service:
                name: jvb
                port:
                  number: 9090
